package com.tf.npu.Items;


public class ItemRenderLoader {

    public ItemRenderLoader() {
        ItemLoader.registerRenders();
    }
}
