package com.tf.npu.interfaces;

public interface IHasModel {
    public void registryItemRender();
}
