package com.tf.npu.util;

public class Reference {
    public static final String NAME = "com.tf.npu.libs";
    public static final String MODID = "npu";
    public static final String VERSION = "2.23.0119";
    public static final String CLIENT_PROXY_CLASS = "com.tf.npu.Proxy.ClientProxy";
    public static final String SERVER_PROXY_CLASS = "com.tf.npu.Proxy.CommonProxy";

}
