package com.tf.npu.util;


import org.apache.logging.log4j.Logger;

public class Util {
    public static Logger logger;
}
